--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
       # url: "https://github.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://instagram.com/se0nh0ng"
 
 # Site Footer
 footer:
